srkSetProject()
set(OUTPUT_NAME srk-input-hid-input)
set_property(GLOBAL PROPERTY PROJECT_SRK_INPUT_HID_INPUT_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_SRK_INPUT_HID_INPUT_DLL ${SRK_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(PROJECT_SRK_CORE_NAME GLOBAL PROPERTY "PROJECT_SRK_CORE_NAME")
get_property(PROJECT_SRK_CORE_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_CORE_INCLUDE")

get_property(PROJECT_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_NAME")
get_property(PROJECT_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_INCLUDE")

get_property(PROJECT_SRK_HID_NAME GLOBAL PROPERTY "PROJECT_SRK_HID_NAME")
get_property(PROJECT_SRK_HID_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_HID_INCLUDE")

include_directories(
    src/srk/
    ${PROJECT_SRK_CORE_INCLUDE}
    ${PROJECT_SRK_FRAMEWORK_INCLUDE}
    ${PROJECT_SRK_HID_INCLUDE}
)
add_definitions(${SRK_MODULE_DEFINITIONS})
file(GLOB_RECURSE SRC_FILES "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME}
    ${PROJECT_SRK_FRAMEWORK_NAME}
    ${PROJECT_SRK_HID_NAME}
)

set(linkLibs
    ${PROJECT_SRK_CORE_NAME}
    ${PROJECT_SRK_FRAMEWORK_NAME}
    ${PROJECT_SRK_HID_NAME}
)
if (SRK_OS_WINDOWS)
    list(APPEND linkLibs "hid.lib" "SetupAPI.lib")
endif ()
target_link_libraries(${PROJECT_NAME} ${linkLibs})

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_INPUT_MODULES_DIR})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_INPUT_MODULES_DIR}/${PROJECT_NAME})