srkSetProject(${SRK_PROJ_PREFIX})
set(OUTPUT_NAME srk-inputs-hid-input)
set_property(GLOBAL PROPERTY SRKPROJ_SRK_INPUTS_HID_INPUT_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_SRK_INPUTS_HID_INPUT_DLL ${SRK_PROJECT_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_SRK_CORE_NAME GLOBAL PROPERTY "SRKPROJ_SRK_CORE_NAME")
get_property(SRKPROJ_SRK_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_CORE_INCLUDE")

get_property(SRKPROJ_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_NAME")
get_property(SRKPROJ_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_INCLUDE")

get_property(SRKPROJ_SRK_HID_NAME GLOBAL PROPERTY "SRKPROJ_SRK_HID_NAME")
get_property(SRKPROJ_SRK_HID_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_HID_INCLUDE")

include_directories(
    src/srk/
    ${SRKPROJ_SRK_CORE_INCLUDE}
    ${SRKPROJ_SRK_FRAMEWORK_INCLUDE}
    ${SRKPROJ_SRK_HID_INCLUDE}
)
file(GLOB_RECURSE srcFiles "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})
target_compile_definitions(${PROJECT_NAME} PRIVATE ${SRK_MODULE_DEFINITIONS})
add_dependencies(${PROJECT_NAME}
    ${SRKPROJ_SRK_FRAMEWORK_NAME}
    ${SRKPROJ_SRK_HID_NAME}
)

set(linkLibs
    ${SRKPROJ_SRK_CORE_NAME}
    ${SRKPROJ_SRK_FRAMEWORK_NAME}
    ${SRKPROJ_SRK_HID_NAME}
)
if (SRK_OS_WINDOWS)
    list(APPEND linkLibs "hid.lib" "SetupAPI.lib")
endif ()
target_link_libraries(${PROJECT_NAME} ${linkLibs})

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_INPUTS_MODULES_DIR})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_INPUTS_MODULES_DIR}/${PROJECT_NAME})