__set_project()
set(__OUTPUT_NAME ae-win-direct-input)
set_property(GLOBAL PROPERTY __PROJECT_AE_WIN_DIRECT_INPUT_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY __PROJECT_AE_WIN_DIRECT_INPUT_DLL ${__BUILD_DIR}/${__OUTPUT_NAME}$<$<CONFIG:Debug>:${CMAKE_DEBUG_POSTFIX}>${CMAKE_SHARED_LIBRARY_SUFFIX})

get_property(__PROJECT_AE_CORE_NAME GLOBAL PROPERTY "__PROJECT_AE_CORE_NAME")
get_property(__PROJECT_AE_CORE_SRC_DIR GLOBAL PROPERTY "__PROJECT_AE_CORE_SRC_DIR")

include_directories(${__PROJECT_AE_CORE_SRC_DIR}/src/)
add_definitions(-D AE_MODULE_EXPORTS)
file(GLOB SRC_FILES "src/*.h" "src/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME} ${__PROJECT_AE_CORE_NAME})
target_link_libraries(${PROJECT_NAME} ${__PROJECT_AE_CORE_NAME})
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${__AE_MODULES_FOLDER_NAME}/Inputs)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME}) 