__set_project()
set(__OUTPUT_NAME ae-input-xinput)
set_property(GLOBAL PROPERTY PROJECT_AE_INPUT_XINPUT_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_AE_INPUT_XINPUT_DLL ${AE_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${__OUTPUT_NAME}${AE_BUILD_TYPE_SUFFIX}${AE_DLL_SUFFIX})

get_property(PROJECT_AE_CORE_NAME GLOBAL PROPERTY "PROJECT_AE_CORE_NAME")
get_property(PROJECT_AE_CORE_SRC_DIR GLOBAL PROPERTY "PROJECT_AE_CORE_SRC_DIR")

get_property(PROJECT_AE_FRAMEWORK_NAME GLOBAL PROPERTY "PROJECT_AE_FRAMEWORK_NAME")
get_property(PROJECT_AE_FRAMEWORK_SRC_DIR GLOBAL PROPERTY "PROJECT_AE_FRAMEWORK_SRC_DIR")

include_directories(
    ${PROJECT_AE_CORE_SRC_DIR}/src/
    ${PROJECT_AE_FRAMEWORK_SRC_DIR}/src/
)
add_definitions(${AE_MODULE_DEFINITIONS})
file(GLOB_RECURSE SRC_FILES "src/*.h" "src/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME} ${PROJECT_AE_FRAMEWORK_NAME})
target_link_libraries(${PROJECT_NAME}
    ${PROJECT_AE_CORE_NAME}
    ${PROJECT_AE_FRAMEWORK_NAME}
    Xinput.lib
)
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${AE_INPUT_MODULES_DIR})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME})
__install(${AE_INPUT_MODULES_DIR}/${PROJECT_NAME})