__set_project()
set(__OUTPUT_NAME ae-png-converter)
set_property(GLOBAL PROPERTY __PROJECT_AE_PNG_CONVERTER_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY __PROJECT_AE_PNG_CONVERTER_OUTPUT_NAME ${__OUTPUT_NAME})
set_property(GLOBAL PROPERTY __PROJECT_AE_PNG_CONVERTER_DLL ${__BUILD_DIR}/${__OUTPUT_NAME}$<$<CONFIG:Debug>:${CMAKE_DEBUG_POSTFIX}>${CMAKE_SHARED_LIBRARY_SUFFIX})

get_property(__PROJECT_AE_CORE_NAME GLOBAL PROPERTY "__PROJECT_AE_CORE_NAME")
get_property(__PROJECT_AE_CORE_SRC_DIR GLOBAL PROPERTY "__PROJECT_AE_CORE_SRC_DIR")

get_property(__PROJECT_LIBPNG_NAME GLOBAL PROPERTY "__PROJECT_LIBPNG_NAME")
get_property(__PROJECT_LIBPNG_INCLUDE GLOBAL PROPERTY "__PROJECT_LIBPNG_INCLUDE")
get_property(__PROJECT_LIBPNG_LIB GLOBAL PROPERTY "__PROJECT_LIBPNG_LIB")

include_directories(
    ${__PROJECT_AE_CORE_SRC_DIR}/src/
    ${__PROJECT_LIBPNG_INCLUDE}
)
include_directories(${__PROJECT_LIBPNG_INCLUDE})
add_definitions(-D AE_EXTENSION_EXPORTS)
file(GLOB SRC_FILES "src/*.h" "src/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME} 
    ${__PROJECT_AE_CORE_NAME}
    ${__PROJECT_LIBPNG_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${__PROJECT_AE_CORE_NAME}
    ${__PROJECT_LIBPNG_LIB}
)
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${__AE_EXTENSIONS_FOLDER_NAME}/Files/Images)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME}) 